@@ -31,6 +31,7 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.x
 Fixes:
 - delete_item: fixed issue with windows not working properly
 - window_size: fixed issue where sizes were a frame late
+- textures:    fixed several issues with texture creation
 
 -----------------------------------------------------------------------
  VERSION 0.6.16
